サイトのレイアウトを調整した

--- a/css/main.css
+++ b/css/main.css
@@ -16,16 +16,43 @@ max-width: 100%;
 
 }
 
-
 .wrapper {
   padding: 0 10%;
   /* background-color: #eee0b5; */
   }
 
+
+
 .head {
   text-align: center;
   font-size: 1em;
 }
+
+/* youtube */
+.youtube-movie {
+  display: flex;
+  flex-direction: column;
+}
+
+.mov_block {
+  width:100%;
+  padding-bottom: 56.25%;
+  height:0px;
+  position: relative;
+  margin: 3% 0;
+}
+
+.mov_block iframe {
+  position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+
+}
+
+
+
 
 
 
