--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,44 @@ max-width: 100%;
   margin: 0 10%;
   }
 
+header {
+  padding: 10% 0;
+}
+
+.header-content {
+    text-align: center;
+}
+
+.icon {
+  width: 30%;
+}
+
+.siteName {
+  position: relative;
+  display: inline-block;
+  padding: 0 4em;
+  font-size: 1.5em;
+}
+
+.siteName:before, .siteName:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  display: inline-block;
+  width:  2.5em;
+  height: 1px;
+  background-color: #004970;
+}
+
+.siteName:before { left:  0; }
+.siteName:after  { right: 0; }
+
+
+
+.introduction {
+  width: 20em;
+  font-size: 1em;
+}
 
 
 .head {
