--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   margin: auto;
 }
 
-html body {
+html, body {
   width: 100%;
   margin: 0;
   background-color: #004970;
@@ -12,8 +12,16 @@ html body {
   font-size: calc(75.0% + 4 * (100vw - 480px) / 800);
 }
 
+header {
+  padding: 10% 0;
+}
+
+footer {
+  padding: 3% 0;
+}
+
 img {
-max-width: 100%;
+  max-width: 100%;
 }
 
 a {
@@ -21,16 +29,12 @@ a {
 }
 
 .wrapper {
-  background-color: #efebdd;
   margin: 0 10%;
-  }
-
-header {
-  padding: 10% 0;
+  background-color: #efebdd;
 }
 
 .header-content {
-    text-align: center;
+  text-align: center;
 }
 
 .icon {
@@ -38,20 +42,20 @@ header {
 }
 
 .siteName {
-  position: relative;
   display: inline-block;
+  position: relative;
   padding: 0 4em;
   font-size: 1.5em;
 }
 
 .siteName::before, .siteName::after {
-  content: '';
+  display: inline-block;
   position: absolute;
   top: 50%;
-  display: inline-block;
-  width:  2.5em;
+  width: 2.5em;
   height: 1px;
   background-color: #004970;
+  content: '';
 }
 
 .siteName::before { left:  0; }
@@ -62,34 +66,34 @@ header {
   font-size: 1em;
 }
 
-.head {
-  text-align: center;
-  font-size: 1.5em;
-  border-top:    double 5px;
+.head-text {
+  padding: 2% 5%;
+  border-top: double 5px;
   border-bottom: double 5px;
+  font-size: 1.5em;
+  text-align: center;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  padding:  2% 5%;
 }
 
 .btn {
   width: 15em;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
   text-align: center;
 }
 
 .btn-content {
   display: block;
-  font-size: 1.2em;
-  color: #efebdd;
-  background-color: rgba(205,204,118,1);
-  border-radius: 10px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   padding: 1.2em 0;
+  border-radius: 10px;
+  background-color: rgba(205,204,118,1);
+  color: #efebdd;
+  font-size: 1.2em;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .btn-content:hover {
-  cursor : pointer;
   background-color: rgba(205,204,118,0.5);
+  cursor: pointer;
   transition: 0.5s;
 }
 
@@ -99,7 +103,6 @@ header {
   transition: 0.2s;
 }
 
-/* youtube */
 .youtube-movie {
   display: flex;
   flex-direction: column;
@@ -108,7 +111,7 @@ header {
 
 .mov_block {
   position: relative;
-  width:  100%;
+  width: 100%;
   height: 0;
   margin: 3% 0;
   padding-bottom: 56.25%;
@@ -116,57 +119,41 @@ header {
 
 .mov_block iframe {
   position: absolute;
-  top:  0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-
-  border: 1px solid #dcd7c9;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   min-height: 80px;
+  border: 1px solid #dcd7c9;
   background-image: url(../img/loading.gif);
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
-
-/* instagram */
 .instagram-gallery {
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
   padding: 5%;
 }
 
 .img_block {
-  display: inline-block;
   width: 33.3%;
-  padding:  1%;
-
+  padding: 1%;
 }
 
 .img_block a {
   display: block;
-  font-size: 0;
-
-  border: 1px solid #dcd7c9;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   min-height: 80px;
+  border: 1px solid #dcd7c9;
   background-image: url(../img/loading.gif);
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  font-size: 0;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .copyRightText {
-  text-align: center;
   font-size: 1em;
-  padding-bottom: 3%;
+  text-align: center;
 }
-
-/* .caption {
-  margin: 0 0 1em 0;
-  padding: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  font-size: 80%;
-  color: #666;
-} */
